# cplusplus_unit_testing

./: CMakeLists.txt  README.md  shape.cpp
Example_lib/: Authorization.cpp  Authorization.h  AuthorizationManager.cpp  AuthorizationManager.h  CMakeLists.txt
Google_tests/: AuthorizationTest.cpp  CMakeLists.txt
